[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/pause.gd" type="Script" id=1]
[ext_resource path="res://Minecraft.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 2 )

[node name="pause" type="CanvasLayer"]
pause_mode = 2
layer = 5
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -9.0
margin_top = -1.0
margin_right = -9.0
margin_bottom = -1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 419.0
margin_top = 249.0
margin_right = 592.0
margin_bottom = 353.0
color = Color( 1, 1, 1, 0.717647 )

[node name="Continue" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.5
margin_top = -11.0
margin_right = 43.5
margin_bottom = 11.0
custom_fonts/font = SubResource( 1 )
text = "Continue"
flat = true

[node name="fullscreen" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -54.0
margin_top = -43.0
margin_right = 54.0
margin_bottom = -21.0
custom_fonts/font = SubResource( 2 )
text = "Full Screen"
flat = true

[node name="Back To Main Menu" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -93.0
margin_top = 15.0
margin_right = 83.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 2 )
text = "Back To Main Menu"
flat = true

[node name="HSlider" type="HSlider" parent="."]
anchor_right = 0.16
margin_left = 260.0
margin_top = 348.0
margin_right = 566.0
margin_bottom = 429.0
min_value = -30.0
max_value = 0.0

[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="fullscreen" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Back To Main Menu" to="." method="_on_Back_To_Main_Menu_pressed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
